Fix display on mobile and computer

--- a/calibrate/style.css
+++ b/calibrate/style.css
@@ -1,8 +1,17 @@
 body {
   font-family: Verdana;
-  font-size: 40px;
+  font-size: 35px;
   display: flex;
   justify-content: center;
+  zoom: 50%;
+}
+
+
+@media (hover:none), (hover:on-demand) {
+  body{
+    zoom: 100%;
+    font-size: 40px;
+  }
 }
 
 .ui {
@@ -11,7 +20,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  height:90vh;
+  height: calc(100% - 150px);
   overflow: scroll;
 }
 
@@ -34,7 +43,6 @@ body {
 
 
 .ui_header{
-  height: 5vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -133,7 +141,7 @@ body {
   justify-content: center;
   bottom:0;
   width: 100%;
-  height: 10vh;
+  height: 150px;
   padding: 0px;
   background: #f8f8f8;
 }
@@ -150,7 +158,6 @@ body {
 }
 
 .ui_factory_reset_menu{
-  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
