--- a/record/style.css
+++ b/record/style.css
@@ -1,8 +1,16 @@
 body {
   font-family: Verdana;
-  font-size: 40px;
+  font-size: 35px;
   display: flex;
   justify-content: center;
+  zoom: 50%;
+}
+
+@media (hover:none), (hover:on-demand) {
+  body{
+    zoom: 100%;
+    font-size: 40px;
+  }
 }
 
 .ui_canvas{
@@ -13,7 +21,6 @@ body {
 
 
 .ui_header{
-  height: 5vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -32,7 +39,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  height:90vh;
+  height: calc(100% - 150px);
   overflow: scroll;
 }
 
@@ -55,7 +62,7 @@ body {
   justify-content: center;
   bottom:0;
   width: 100%;
-  height: 10vh;
+  height: 150px;
   padding: 0px;
   background: #f8f8f8;
 }
